Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/fields/Fragile__c.field-meta.xml
<CustomField>
    <fullName>Fragile__c</fullName>
    <label>Fragile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>