Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <inlineHelpText>Enter height in centimeters.</inlineHelpText>
    <label>Height (cm.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>