Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/fields/Mail_Name__c.field-meta.xml
<CustomField>
    <fullName>Mail_Name__c</fullName>
    <label>Mail Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>