Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <length>60</length>
    <type>Text</type>
</CustomField>