Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <inlineHelpText>Enter weight in kilograms.</inlineHelpText>
    <label>Weight (kg.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>