Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/fields/Width_cm__c.field-meta.xml
<CustomField>
    <fullName>Width_cm__c</fullName>
    <inlineHelpText>Enter width in centimeters.</inlineHelpText>
    <label>Width (cm.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>