Project0/manifest/Project0c/force-app/main/default/objects/Mail__c/listViews/Route_0.listView-meta.xml
<ListView>
    <fullName>Route_0</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Route__c</field>
        <operation>equals</operation>
        <value>ROUTE-0000</value>
    </filters>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Un-Delivered.</value>
    </filters>
    <label>Route 0</label>
    <sharedTo>
        <role>Mail_Handler</role>
        <role>Route_0</role>
    </sharedTo>
</ListView>